--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,6 @@
 {
-  "builds": [
-    {
-      "src": "./server.js",
-      "use": "@vercel/node"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/.*",
-      "dest": "server.js"
-    }
-  ]
+  "version": 2,
+  "name": "api-todo",
+  "builds": [{ "src": "./index.js", "use": "@vercel/node" }],
+  "routes": [{ "src": "/(.*)", "dest": "/" }]
 }
